# pull-request-codecommit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  create_repo.sh  pyproject.toml  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml  semantic.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto-merge.yml  ci.yml  release.yml
pull_request_codecommit/: __init__.py  config.py  git_client.py  pull_request.py  pull_request_codecommit.py  pull_request_proposal.py  repository.py
pull_request_codecommit/aws/: client.py
pull_request_codecommit/git/: __init__.py  client.py  commit.py  commits.py  message.py  remote.py
tests/: __init__.py  test_command.py  test_git_client.py  test_pull_request.py  test_repository.py
