[tool.poetry]
name = "pull-request-codecommit"
version = "0.5.4"
description = "pull-request-codecommit creates a PR within CodeCommit based on your commit messages."
authors = ["Joris Conijn <joris@conijnonline.nl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
python-semantic-release = "9.1.1"

[tool.poetry.dev-dependencies]
black = "^24.2"
mypy = "^1.8"
pytest = "^8.1.0"
pytest-cov = "^4.1.0"
pytest-mypy = "^0.10.3"
toml = "^0.10.2"
types-toml = "^0.10.8"
twine = "^5.0.0"
xenon = "^0.9.1"
radon = "^6.0.1"

[tool.poetry.scripts]
pull-request-codecommit = "pull_request_codecommit:main"
git-pr = "pull_request_codecommit:main"

[tool.semantic_release]
version_variables = [
    "pull_request_codecommit/__init__.py:__version__",
    "pyproject.toml:version"
]
upload_to_pypi = true
upload_to_release = true

[tool.semantic_release.publish]
upload_to_vcs_release = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
