[tool.poetry]
name = "pull-request-codecommit"
version = "1.0.0"
description = "pull-request-codecommit creates a PR within CodeCommit based on your commit messages."
authors = ["Joris Conijn <joris@conijnonline.nl>"]
license = "Apache2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
python-semantic-release = "10.0.2"

[tool.poetry.dev-dependencies]
black = "^24.8"
mypy = "^1.14"
pytest = "^8.3.5"
pytest-cov = "^5.0.0"
pytest-mypy = "^1.0.1"
toml = "^0.10.2"
types-toml = "^0.10.8"
twine = "^6.1.0"
xenon = "^0.9.3"
radon = "^6.0.1"

[tool.poetry.scripts]
pull-request-codecommit = "pull_request_codecommit:main"
git-pr = "pull_request_codecommit:main"

[tool.pytest]
testpaths = "tests"

[tool.mypy]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["pull_request_codecommit"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "@abstract"
]

[tool.semantic_release]
build_command = "pip install poetry && poetry build"
version_variables = [
    "pull_request_codecommit/__init__.py:__version__",
    "pyproject.toml:version"
]

[tool.semantic_release.commit_parser_options]
allowed_tags = [ "build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test" ]
minor_tags = [ "feat" ]
patch_tags = [ "fix", "perf", "refactor", "chore(deps)" ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
